// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WishListStore test - 2 1`] = `
Object {
  "items": Array [
    Object {
      "image": "https://via.placeholder.com/150",
      "name": "Another name",
      "price": 34.23,
    },
  ],
}
`;

exports[`WishListStore test - 2 2`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "https://via.placeholder.com/150",
      "name": "Default name",
      "price": 34.23,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Another name",
  },
]
`;

exports[`WishListStore test 1`] = `
Object {
  "items": Array [
    Object {
      "image": "https://via.placeholder.com/150",
      "name": "Another name",
      "price": 34.23,
    },
  ],
}
`;

exports[`WishListStore test 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "https://via.placeholder.com/150",
        "name": "Default name",
        "price": 34.23,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "https://via.placeholder.com/150",
        "name": "Another name",
        "price": 34.23,
      },
    ],
  },
]
`;
